# photo-sync

./: .env.dev  .env.example  .env.prod.example  .gitignore  README.md  TEST_RESULTS.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
config/: Caddyfile  Caddyfile.dev  Caddyfile.prod
docs/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  QUICKSTART-MAC.md  QUICKSTART-WINDOWS.md  QUICKSTART-WSL.md  RESTORE.md
handoffs/: 2025-12-28_15-50-42_phase3-complete.md  2025-12-28_17-11-06_deployment-setup-complete.md  2025-12-29_00-03-48_capture-immich-ui-screenshots.md  2025-12-29_00-37-53_screenshot-capture-debug-fix.md  2025-12-29_01-47-12_screenshot-capture-complete.md  2025-12-29_08-07-43_analysis-service-tasks-1-6-complete.md  2025-12-29_12-35-00_remaining-api-endpoints.md
services/analysis/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/analysis/alembic/: env.py
services/analysis/alembic/versions/: 20251229025750_initial_schema.py
services/analysis/src/: config.py  database.py  main.py  models.py  schemas.py
services/analysis/src/burst/: __init__.py  detector.py  scorer.py
services/analysis/src/quality/: __init__.py  blur_detector.py  corruption_detector.py  exposure_analyzer.py  scorer.py
services/analysis/tests/: conftest.py  test_blur_detector.py  test_burst_detector.py  test_burst_scorer.py  test_config.py  test_corruption_detector.py  test_database.py  test_exposure_analyzer.py  test_main.py  test_migrations.py  test_models.py  test_quality_scorer.py  test_schemas.py  test_type_adapters.py
(+136 files in other folders)
